# llada-mech-interp

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
llada_mi/: config.py  data.py  inference.py  setup.py  utils.py  visualize.py
llada_mi/sae/: __init__.py  analyze_activations.py  dataset.py  model.py  record.py  train.py
notebooks/: activations.ipynb
scripts/: download_pile.py  train_sae.py
tests/: __init__.py  conftest.py  test_dataset.py  test_labeling.py  test_normalization.py  test_sae_model.py  test_sae_record.py  test_train.py
