[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llada_mi"
version = "0.1.0"
description = "Exploring Activation Feature Decomposition in Diffusion Language Models"
authors = [{name = "Gabriel Hübner Lucchesi", email = "gabrielhubnerlucchesi@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "transformers",
    "numpy",
    "matplotlib",
    "seaborn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["llada_mi*"]
