[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llada_mi"
version = "0.1.0"
description = "Exploring Activation Feature Decomposition in Diffusion Language Models"
authors = [{name = "Gabriel Hübner Lucchesi", email = "gabrielhubnerlucchesi@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "transformers",
    "numpy",
    "matplotlib",
    "seaborn",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["llada_mi*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--disable-warnings",
    "--tb=short",
]
markers = [
    "gpu_intensive: marks tests that require intensive GPU resources (loads full LLaDA model)",
]
